--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
   <title>Frontend Mentor | Social links profile</title>
 </head>
 <body>
-  <main></main>
+  <main>
+    <img src="assets/images/avatar-jessica.jpeg
+" alt="avatar">
+    <h1>Jessica Randall</h1>
+    <h2>London, United Kingdom</h2>
+    <span>"Front-end developer and avid reader."</span>
+        <section class="btns">
+          <p>GitHub</p>
+          <p>Frontend Mentor</p>
+          <p>LinkedIn</p>
+          <p>Twitter</p>
+          <p>Instagram</p>
+        </section>
+  </main>
 
   
 </body>
