putting elements into containers to move them around separtately.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
   <main>
+    <section class="avatar">
     <img src="assets/images/avatar-jessica.jpeg
 " alt="avatar">
     <h1>Jessica Randall</h1>
     <h2>London, United Kingdom</h2>
+    </section>
     <span>"Front-end developer and avid reader."</span>
         <section class="btns">
           <p>GitHub</p>
