--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Social links profile</title>
 </head>
 <body>
   <main>
-    <section class="avatar">
+    
     <img src="assets/images/avatar-jessica.jpeg
 " alt="avatar">
+<section class="avatar"></section>
     <h1>Jessica Randall</h1>
-    <h2>London, United Kingdom</h2>
+    <p class="location">London, United Kingdom</p>
     </section>
     <span>"Front-end developer and avid reader."</span>
         <section class="btns">
